Faild Facebook FireBase

--- a/ReactNative/Altair/android/build.gradle
+++ b/ReactNative/Altair/android/build.gradle
@@ -19,6 +19,7 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        mavenCentral()
         jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
