--- a/ReactNative/Altair/android/app/build.gradle
+++ b/ReactNative/Altair/android/app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: "com.android.application"
 //apply plugin: 'io.fabric'
 import com.android.build.OutputFile
+//import com.facebook.FacebookSdk
+//import com.facebook.appevents.AppEventsLogger
+
 
 // repositories {
 //   maven { url 'https://maven.fabric.io/public' }
@@ -178,6 +181,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     //compile "com.google.firebase:firebase-core:9.0.2cle"
+    //compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
 
 // Run this once to be able to run the application with BUCK
