--- a/ReactNative/Altair/package.json
+++ b/ReactNative/Altair/package.json
@@ -15,6 +15,7 @@
     "react": "16.2.0",
     "react-native": "0.53.0",
     "react-native-button": "^2.3.0",
+    "react-native-fbsdk": "^0.7.0",
     "react-native-firebase": "^3.3.1",
     "react-native-modalbox": "^1.4.2",
     "react-native-swipeout": "^2.3.3",
