--- a/ReactNative/Altair/android/app/src/main/AndroidManifest.xml
+++ b/ReactNative/Altair/android/app/src/main/AndroidManifest.xml
@@ -5,10 +5,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    
+
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="22" />
+    <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
 
     <application
       android:name=".MainApplication"
@@ -26,25 +27,7 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
-      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-
-        <meta-data  android:name="com.facebook.sdk.ApplicationId" 
-				    android:value="@string/facebook_app_id"/>
-			
-        <activity   android:name="com.facebook.FacebookActivity"
-                    android:configChanges=
-                    "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-                    android:label="@string/app_name" />
-        <activity
-                    android:name="com.facebook.CustomTabActivity"
-                    android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="@string/fb_login_protocol_scheme" />
-            </intent-filter>
-        </activity>
+      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />			
     </application>
 
 </manifest>
