--- a/ReactNative/Altair/android/app/build.gradle
+++ b/ReactNative/Altair/android/app/build.gradle
@@ -182,6 +182,8 @@ dependencies {
     compile "com.facebook.react:react-native:+"  // From node_modules
     //compile "com.google.firebase:firebase-core:9.0.2cle"
     //compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile('com.facebook.android:facebook-android-sdk:4.22.1')
+
 }
 
 // Run this once to be able to run the application with BUCK
