--- a/ReactNative/Altair/android/app/build.gradle
+++ b/ReactNative/Altair/android/app/build.gradle
@@ -182,6 +182,9 @@ dependencies {
     compile "com.facebook.react:react-native:+"  // From node_modules
     //compile "com.google.firebase:firebase-core:9.0.2cle"
     //compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile(project(':react-native-fbsdk')) {
+    exclude(group: 'com.facebook.android', module: 'facebook-android-sdk')
+    }
     compile('com.facebook.android:facebook-android-sdk:4.22.1')
 
 }
