--- a/ReactNative/Altair/android/app/src/main/AndroidManifest.xml
+++ b/ReactNative/Altair/android/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
-      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />			
+      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />		
+      <activity android:name="com.facebook.LoginActivity"/>	
     </application>
 
 </manifest>
