--- a/ReactNative/Altair/.vscode/settings.json
+++ b/ReactNative/Altair/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "javascript.validate.enable": false,
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
