--- a/ReactNative/Altair/android/app/build.gradle
+++ b/ReactNative/Altair/android/app/build.gradle
@@ -154,39 +154,44 @@ android {
 }
 
 dependencies {
+    compile(project(":react-native-google-signin")){         
+        exclude group: "com.google.android.gms" // very important
+    }
+    compile(project(':react-native-fbsdk')) {
+    exclude(group: 'com.facebook.android', module: 'facebook-android-sdk')
+    }
+
+    compile 'com.android.support:multidex:1.0.1'
     // compile(project(':react-native-firebase')) {
     //     transitive = false
-    // }
-
-    // RNFirebase required dependencies
-    compile "com.google.firebase:firebase-core:11.8.0"
-    compile "com.google.android.gms:play-services-base:11.8.0"
-
-    // RNFirebase optional dependencies
-    compile "com.google.firebase:firebase-ads:11.8.0"
-    compile "com.google.firebase:firebase-auth:11.8.0"
-    compile "com.google.firebase:firebase-config:11.8.0"
-    compile "com.google.firebase:firebase-crash:11.8.0"
-    compile "com.google.firebase:firebase-database:11.8.0"
-    compile "com.google.firebase:firebase-firestore:11.8.0"
-    compile "com.google.firebase:firebase-messaging:11.8.0"
-    compile "com.google.firebase:firebase-perf:11.8.0"
-    compile "com.google.firebase:firebase-storage:11.8.0"
-    
-    // compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
-    // transitive = true;
     // }
 
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
-    //compile "com.google.firebase:firebase-core:9.0.2cle"
-    //compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile(project(':react-native-fbsdk')) {
-    exclude(group: 'com.facebook.android', module: 'facebook-android-sdk')
-    }
-    compile('com.facebook.android:facebook-android-sdk:4.22.1')
 
+    // RNFirebase required dependencies
+    //compile "com.google.android.gms:play-services-base:11.8.0"
+    compile "com.google.firebase:firebase-core:11.8.0"
+    // RNFirebase optional dependencies
+    //compile "com.google.firebase:firebase-ads:11.8.0"
+    compile "com.google.firebase:firebase-auth:11.8.0"
+    // compile "com.google.firebase:firebase-config:11.8.0"
+    // compile "com.google.firebase:firebase-crash:11.8.0"
+    // compile "com.google.firebase:firebase-database:11.8.0"
+    // compile "com.google.firebase:firebase-firestore:11.8.0"
+    // compile "com.google.firebase:firebase-messaging:11.8.0"
+    // compile "com.google.firebase:firebase-perf:11.8.0"
+    // compile "com.google.firebase:firebase-storage:11.8.0"
+    
+    // compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
+    // transitive = true;
+    // }
+   
+    // Facebook SDK
+    compile('com.facebook.android:facebook-android-sdk:4.22.1')
+    // Google SignIn
+    compile "com.google.android.gms:play-services-auth:9.2.1" // should be at least 9.0.0
 }
 
 // Run this once to be able to run the application with BUCK
@@ -196,4 +201,4 @@ task copyDownloadableDepsToLibs(type: Copy) {
     into 'libs'
 }
 
-//apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
