--- a/ReactNative/Altair/android/build.gradle
+++ b/ReactNative/Altair/android/build.gradle
@@ -9,13 +9,16 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.google.gms:google-services:3.1.2'
+        // classpath 'com.android.tools.build:gradle:2.2.3'
+        // classpath 'com.google.gms:google-services:3.1.2'
+        classpath 'com.android.tools.build:gradle:2.1.2' // <--- update this
+        classpath 'com.google.gms:google-services:3.0.0' // <--- add this
         //classpath 'io.fabric.tools:gradle:1.+'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+def googlePlayServicesVersion = '11.8.0'
 
 allprojects {
     repositories {
@@ -29,5 +32,9 @@ allprojects {
         maven {
             url 'https://maven.google.com'
         }
+        // maven {
+        //     url "$rootDir/../node_modules/react-native-google-signin/android"
+        // }
+        
     }
 }
