--- a/ReactNative/Altair/package.json
+++ b/ReactNative/Altair/package.json
@@ -17,6 +17,7 @@
     "react-native-button": "^2.3.0",
     "react-native-fbsdk": "^0.7.0",
     "react-native-firebase": "^3.3.1",
+    "react-native-google-signin": "^0.12.0",
     "react-native-modalbox": "^1.4.2",
     "react-native-swipeout": "^2.3.3",
     "react-native-vector-icons": "^4.5.0"
